# matplotlib

./: .pre-commit-config.yaml  azure-pipelines.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: autoclose_comment.yml  autoclose_schedule.yml  cibuildwheel.yml  codeql-analysis.yml  cygwin.yml  linting.yml  tests.yml  triage_board.yml  wasm.yml
ci/: mypy-stubtest-allowlist.txt
doc/: conf.py
doc/api/: colorizer_api.rst  figure_api.rst  index.rst  matplotlib_configuration_api.rst  pyplot_summary.rst
doc/devel/: communication_guide.rst
doc/project/: license.rst
doc/release/next_whats_new/: ignore_system_fonts.rst
doc/sphinxext/: gallery_order.py
galleries/examples/misc/: logos2.py
lib/matplotlib/: __init__.py  __init__.pyi  _cm_bivar.py  _cm_multivar.py  _constrained_layout.py  _mathtext.py  animation.py  artist.py  axis.py  axis.pyi  backend_bases.py  cbook.py  cm.py  cm.pyi  collections.py  colorbar.py  colorbar.pyi  colorizer.py  colors.py  colors.pyi  contour.py  contour.pyi  dviread.py  figure.py  figure.pyi  font_manager.py  font_manager.pyi  ft2font.pyi  image.py  image.pyi  meson.build  patches.pyi  pyplot.py  rcsetup.py  scale.py  scale.pyi  streamplot.py  text.py  ticker.py
lib/matplotlib/colormapping/: _colormap_data.py  _colormap_luts.py  colorizer.py  colormap_registry.py  colormaps.py  lighting.py  meson.build  norms.py
requirements/dev/: build-requirements.txt
requirements/testing/: mypy.txt
src/: _path.h  ft2font.cpp  ft2font.h  ft2font_wrapper.cpp
subprojects/: libraqm-0.10.4.wrap
tools/: boilerplate.py
(+50 files in other folders)
