python_sources = [
  '__init__.py',
  '_colormap_data.py',
  '_colormap_luts.py',
  'colormap_registry.py',
  'colorbar.py',
  'colorizer.py',
  'colormaps.py',
  'lighting.py',
  'norms.py',
]

typing_sources = [
  '__init__.pyi',
  'colormap_registry.pyi',
  'colorbar.pyi',
  'colorizer.pyi',
  'colormaps.pyi',
  'lighting.pyi',
  'norms.pyi',
]

py3.install_sources(python_sources, typing_sources,
                    subdir: 'matplotlib/colormapping')
